spark-submit to spark-shell